<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".assignment1.MainActivity"
    android:orientation="vertical"
    android:background="@drawable/bg_form_bg"
    android:layout_margin="12dp">


    <TextView
        android:id="@+id/heading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/heading"
        android:textSize="19sp"
        android:textColor="@color/black"
        android:layout_centerHorizontal="true"
        android:layout_margin="12dp"/>

    <TextView
        android:id="@+id/name2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/heading"
        android:layout_marginStart="12dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="12dp"
        android:background="@drawable/bg_form"
        android:text="@string/name"
        android:textColor="@color/black"
        android:textSize="16sp" />

    <TextView
        android:background="@drawable/bg_form"
        android:id="@+id/phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/name2"
        android:text="@string/phone"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:layout_centerHorizontal="true"
        android:layout_margin="12dp"/>

    <TextView
        android:background="@drawable/bg_form"
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/phone"
        android:text="@string/email"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:layout_margin="12dp"/>

    <TextView
        android:background="@drawable/bg_form"
        android:id="@+id/gender"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/email"
        android:text="@string/gender"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:layout_margin="12dp"/>

    <TextView
        android:background="@drawable/bg_form"
        android:id="@+id/department"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/gender"
        android:text="@string/department"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:layout_margin="12dp"/>

    <Button
        android:id="@+id/submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/department"
        android:text="@string/submit"
        android:textColor="@color/white"
        android:layout_centerHorizontal="true"
        android:layout_margin="12dp"/>

</RelativeLayout>