<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".assignment3.ButtonPage"
    android:orientation="vertical">
<RelativeLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_centerInParent="true">
    <Button
        android:id="@+id/ContainerView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/Container" />

    <Button
        android:id="@+id/FrameLayoutView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/ContainerView"
        android:layout_centerHorizontal="true"
        android:text="@string/FrameLayout" />

    <Button
        android:id="@+id/FrameLayoutView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/FrameLayoutView"
        android:layout_centerHorizontal="true"
        android:text="@string/FrameLayout2" />

</RelativeLayout>


</RelativeLayout>