<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="40dp"
    android:layout_marginTop="120dp"
    android:layout_marginRight="40dp"
    android:orientation="vertical"
    tools:context=".assignment4.SignUp">

    <TextView
        android:id="@+id/suSignup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/SiSu"
        android:textColor="@color/black"
        android:textSize="35sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/suEnter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/suSignup"
        android:layout_centerHorizontal="true"
        android:text="@string/SuText" />

    <EditText
        android:id="@+id/suName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/suEnter"
        android:layout_marginTop="50dp"
        android:hint="Name"
        android:minHeight="48dp" />

    <EditText
        android:id="@+id/suEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/suName"
        android:layout_marginTop="10dp"
        android:hint="Email"
        android:minHeight="48dp" />

    <EditText
        android:id="@+id/suPhone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/suEmail"
        android:layout_marginTop="10dp"
        android:hint="Phone"
        android:minHeight="48dp" />

    <EditText
        android:id="@+id/suPass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/suPhone"
        android:layout_marginTop="10dp"
        android:inputType="textPassword"
        android:hint="Password"
        android:minHeight="48dp" />

    <EditText
        android:id="@+id/suRePass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/suPass"
        android:layout_marginTop="10dp"
        android:hint="Re-enter password"
        android:inputType="textPassword"
        android:minHeight="48dp" />

    <Button
        android:id="@+id/su"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/suRePass"
        android:layout_marginTop="40dp"
        android:backgroundTint="@color/black"
        android:text="@string/Su"
        android:textSize="20sp" />


</RelativeLayout>